<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:drawablePadding="@dimen/dp_4"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_24"
        app:drawableStartCompat="@drawable/ic_newspaper"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_4"
        android:padding="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toStartOf="@id/btn_dark_mode"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:srcCompat="@drawable/ic_search" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="@id/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_search"
        app:srcCompat="@drawable/ic_dark_mode" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_banner"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_150"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dot_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                app:dotsColor="@color/grey_500"
                app:dotsCornerRadius="@dimen/dp_4"
                app:dotsSize="@dimen/dp_8"
                app:dotsSpacing="@dimen/dp_4"
                app:dotsWidthFactor="2.5"
                app:layout_constraintBottom_toBottomOf="@+id/vp_banner"
                app:layout_constraintEnd_toEndOf="@+id/vp_banner"
                app:layout_constraintStart_toStartOf="@+id/vp_banner"
                app:selectedDotColor="@color/white" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_12"
                android:drawablePadding="@dimen/dp_4"
                android:gravity="center_vertical"
                android:text="@string/category"
                android:textColor="?android:attr/textColorPrimary"
                app:drawableStartCompat="@drawable/ic_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vp_banner" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category" />

            <TextView
                android:id="@+id/tv_late_article"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_12"
                android:drawablePadding="@dimen/dp_4"
                android:gravity="center_vertical"
                android:text="@string/new_article"
                android:textColor="?android:attr/textColorPrimary"
                app:drawableStartCompat="@drawable/ic_article"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_article"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp_8"
                android:paddingVertical="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_late_article" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>